--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <marquee class="animated" id="animated_text"
       ><i
         ><b>Note :</b> This is a counter app built with JS and DOM
-        manipulation</i
+        manipulation.</i
       ></marquee
     >
     <!-- Nav -->
@@ -34,7 +34,7 @@
     <!-- Main section -->
     <main>
       <div class="container">
-        <div class="main">
+        <div class="main" id="content">
           <h1 id="heading">Counter</h1>
           <h2 id="value">0</h2>
           <div class="buttons">
@@ -51,7 +51,7 @@
     </main>
     <!-- footer -->
     <footer id="footer">
-      <small>@copy Shakil Ahmed || 2022</small>
+      <small>@copy Shakil Ahmmed || 2022</small>
     </footer>
     <!-- Link Javascript -->
     <script src="js/app.js"></script>
