--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </main>
     <!-- footer -->
     <footer id="footer">
-      <small>@copy Shakil Ahmmed || 2022</small>
+      <small>&copy; Shakil Ahmmed || 2022</small>
     </footer>
     <!-- Link Javascript -->
     <script src="js/app.js"></script>
