--- a/index.html
+++ b/index.html
@@ -39,16 +39,30 @@
           <h2 id="value">0</h2>
           <div class="buttons">
             <button class="btn minus">Decerease</button>
-            <button class="btn reset">Reset</button
+            <button class="btn reset btn_reset">Reset</button
             ><button class="btn add">Increase</button>
           </div>
+
+          <i><p id="time"></p></i>
           <!-- Show Alert -->
-          <p id="alert-container">
-            <span id="alert"></span>
-          </p>
+          <div id="snackbar"></div>
+        </div>
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+          <!-- Modal content -->
+          <div class="modal-content">
+            <span class="modal-btn">
+              <span class="confirm">Confirm</span>
+              <span class="close">Cancel</span>
+            </span>
+            <p id="modal-note">
+              <i><b>**Note: Counter value will be reset to zero!</b></i>
+            </p>
+          </div>
         </div>
       </div>
     </main>
+
     <!-- footer -->
     <footer id="footer">
       <small>&copy; Shakil Ahmmed || 2022</small>
