--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
   </head>
   <body>
     <marquee class="animated" id="animated_text"
-      ><i
-        ><b>Note :</b> This is a counter app built with JS and DOM
-        manipulation.</i
-      ></marquee
+      ><i>This is a counter app built with JS and DOM manipulation.</i></marquee
     >
     <!-- Nav -->
     <nav id="nav">
