--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div id="snackbar"></div>
           <i
             ><small
-              ><b>*Note: </b>The counter value is saved on loca storage. If you
+              ><b>*Note: </b>The counter value is saved on local storage. If you
               reset the counter, the counter value on the local storage will be
               cleared!</small
             ></i
